FIX: button z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,6 +135,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 @media (max-width: 56rem) {
